--- a/index.html
+++ b/index.html
@@ -74,7 +74,9 @@
                 </div>
 
                 <div class="hero-image">
-                    <video src="assest/IMG_0671.MP4"  alt="Forex Trading Dashboard"  class="dashboard-image" loop autoplay></video>
+                    <video   alt="Forex Trading Dashboard"  class="dashboard-image" autoplay muted loop playsinline>
+                        <source src="assest/IMG_0671.MP4" type="video/mp4">
+                    </video>
 
                 </div>
             </div>
